--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
     </video>
     
     <div class="container">
+        <img src="logo.png" alt="Logo" class="logo">
         <h1>PORTAL LAYANAN MASYARAKAT</h1>
         <h2>KANTOR KEMENTRIAN AGAMA KABUPATEN FAKFAK</h2>
-        <div class="separator"></div>
-        <p>Portal pengaduan ini untuk menerima pengaduan dari masyarakat terhadap pelayanan kinerja ASN di lingkungan Kantor Kementerian Agama Kabupaten Fakfak.</p>
         <h2>PILIH LAYANAN</h2>
         
         <div class="buttons">
