--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <h2>PILIH LAYANAN</h2>
         
         <div class="buttons">
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSee2nr22yAjSQAKT_uQYrW5V3BPFt0N-rPkcWAmk55VuktfMg/viewform?usp=header" class="button">Survey Kepuasan Masyarakat</a>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSee2nr22yAjSQAKT_uQYrW5V3BPFt0N-rPkcWAmk55VuktfMg/viewform?usp=header" class="button">Survey Kepuasan Masyarakat pada Kantor Urusan Agama (KUA)</a>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSdFGPnoivAtHFSv0VxpCGvzl4iGV3OJ0K9cZQoAY1p8ZsPr_Q/viewform?usp=sf_link" class="button">Survey Kepuasan Masyarakat pada Pusat Layanan Haji & Umroh Terpadu (PLHUT)</a>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSej3zTg9dXh5N4KNDnUa6Ykcmf9bT8M3VHLtj64ehfrdsalfw/viewform?usp=header" class="button">Pengaduan Masyarakat</a>
         </div>
     </div>
