--- a/index.html
+++ b/index.html
@@ -4,25 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portal Layanan Masyarakat</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .btn-custom {
+            white-space: normal;
+            word-wrap: break-word;
+            width: 100%; /* Agar tombol responsif */
+            max-width: 350px; /* Batasi lebar tombol */
+        }
+    </style>
 </head>
-<body>
-    <video autoplay muted loop class="video-bg">
-        <source src="background-play.mp4" type="video/mp4"> <!-- Tambahkan link video di sini -->
-    </video>
-    
-    <div class="container">
-        <img src="logo.png" alt="Logo" class="logo">
-        <h1>PORTAL LAYANAN MASYARAKAT</h1>
-        <h2>KANTOR KEMENTRIAN AGAMA KABUPATEN FAKFAK</h2>
-        <h2>PILIH LAYANAN</h2>
+<body class="bg-dark text-light text-center">
+    <div class="container py-5">
+        <img src="logo.png" alt="Logo Kemenag" class="mb-3" style="max-width: 150px;">
+        <h1 class="fw-bold">PORTAL LAYANAN MASYARAKAT</h1>
+        <h3>KANTOR KEMENTERIAN AGAMA KABUPATEN FAKFAK</h3>
+        <p class="mt-3">PILIH LAYANAN</p>
         
-        <div class="buttons">
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSee2nr22yAjSQAKT_uQYrW5V3BPFt0N-rPkcWAmk55VuktfMg/viewform?usp=header" class="button">Survey Kepuasan Masyarakat pada Kantor Urusan Agama (KUA)</a>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSdFGPnoivAtHFSv0VxpCGvzl4iGV3OJ0K9cZQoAY1p8ZsPr_Q/viewform?usp=sf_link" class="button">Survey Kepuasan Masyarakat pada Pusat Layanan Haji & Umroh Terpadu (PLHUT)</a>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSej3zTg9dXh5N4KNDnUa6Ykcmf9bT8M3VHLtj64ehfrdsalfw/viewform?usp=header" class="button">Pengaduan Masyarakat</a>
+        <div class="d-flex flex-column align-items-center gap-3">
+            <a href="#" class="btn btn-warning btn-lg btn-custom">Survey Kepuasan Masyarakat pada Kantor Urusan Agama (KUA)</a>
+            <a href="#" class="btn btn-warning btn-lg btn-custom">Survey Kepuasan Masyarakat pada Pusat Layanan Haji & Umroh Terpadu (PLHUT)</a>
+            <a href="#" class="btn btn-danger btn-lg btn-custom">Pengaduan Masyarakat</a>
         </div>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
