--- a/index.html
+++ b/index.html
@@ -6,16 +6,50 @@
     <title>Portal Layanan Masyarakat</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
+        /* Video sebagai background */
+        .video-bg {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            z-index: -1;
+        }
+
+        /* Overlay agar teks lebih mudah dibaca */
+        .overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            z-index: -1;
+        }
+
+        /* Gaya tombol */
         .btn-custom {
             white-space: normal;
             word-wrap: break-word;
-            width: 100%; /* Agar tombol responsif */
-            max-width: 350px; /* Batasi lebar tombol */
+            width: 100%;
+            max-width: 350px;
         }
     </style>
 </head>
 <body class="bg-dark text-light text-center">
-    <div class="container py-5">
+    
+    <!-- Background Video -->
+    <video autoplay loop muted playsinline class="video-bg">
+        <source src="background-play.mp4" type="video/mp4">
+        Browser Anda tidak mendukung tag video.
+    </video>
+    
+    <!-- Overlay untuk efek gelap -->
+    <div class="overlay"></div>
+
+    <!-- Konten Utama -->
+    <div class="container py-5 position-relative">
         <img src="logo.png" alt="Logo Kemenag" class="mb-3" style="max-width: 150px;">
         <h1 class="fw-bold">PORTAL LAYANAN MASYARAKAT</h1>
         <h3>KANTOR KEMENTERIAN AGAMA KABUPATEN FAKFAK</h3>
